Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* the resolver wasn't properly accounting for planned modifications to
  the installed pkgs database.  If you've had upgrade issues from
  blockers, this is the root cause (pam/pambase in particular).

* for portage configuration when PORTDIR_OVERLAY is in use and portdir
  has a pregenerated cache, check the pregenerated cache first when
  looking for metadata.  This degrades the usage case where overlays
  override quite a few core eclasses in favor of the more common case
  where the pregenerated cache is the majority of the time, accurate.
  End result is upwards of a 2x reduction in open invocations.


pkgcore 0.5.2: October 28, 2009

* touch vdb root on vdb modification as a way to notify alternative PMs
  that their cache needs updating.  Gentoo bug #290428.  Just leaves paludis
  to join in on the fun...

* portage 2.2 modified make.globals to add a default, non glep23 compliant
  ACCEPT_LICENSE.  pkgcore's implementation has been modified to be non
  compliant to glep23, matching portage semantics.

  If pquery <atom> has suddenly started returning nothing, this was the cause.

* fix a traceback that could occur when doing pmerge -pv for when binpkg
  repos were involved.


pkgcore 0.5.1: October 22, 2009

* correct a python-2.6 incompatibility that rears it's head when doing
  repository operations (installing, uninstalling, etc).


pkgcore 0.5: October 22, 2009

* add protection against multiple python versions, w/ the default python
  invocation being a different major version from what pkgcore was installed
  under.  Primarily a fix to dohtml.

* ticket 230; tweaks for better >=python2.5 compatibility.

* pkgcore will now try to sync overlays if the overlay is a vcs.  This can
  be disabled by adding FEATURES="-autodetect-sync" to your make.conf

* pkgcore.sync.base.AutodetectSyncer was added as a way to pull configuration